--- a/templates/login.html
+++ b/templates/login.html
@@ -16,18 +16,17 @@
                         <i class="fas fa-users"></i>
                     </div>
                     <div>
-                        <h3>Общение</h3>
-                        <p>Общайтесь с друзьями и знакомыми</p>
+                        <h3>Общение с соседями</h3>
+                        <p>Находите своих соседей и обменивайтесь опытом</p>
                     </div>
                 </div>
                 
                 <div class="feature">
                     <div class="feature-icon">
-                        <i class="fas fa-share-alt"></i>
-                    </div>
+                        <i class="fas fa-layer-group"></i> </div>
                     <div>
-                        <h3>Делитесь</h3>
-                        <p>Делитесь своими мыслями и новостями</p>
+                        <h3>Сообщества!</h3>
+                        <p>Создавайте локальные группы по интересам, району или проблемам</p>
                     </div>
                 </div>
                 
