--- a/templates/reklama.html
+++ b/templates/reklama.html
@@ -98,7 +98,7 @@
         <div class="reklama-cta">
             <h3>Готовы попробовать?</h3>
             <p>Линка уже доступна на вашем устройстве!</p>
-            <a href="{{ url_for('index') }}" class="btn btn-primary">
+            <a href="{{ url_for('feed') }}" class="btn btn-primary">
                 <i class="fas fa-rocket"></i> Перейти к ленте
             </a>
         </div>
